@@ -5,6 +5,9 @@
 # Distributed under the GPL v2
 # $Id$
 
+  16 Apr 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
+  Support a non-static cryptsetup binary (bug #409277)
+
   09 Apr 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
   defaults/keymaps/keymapList, defaults/keymaps/sf.map:
   Add keymap "sf" from Pentoo
